<resources>
    <string name="app_name">FoodNote</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notebook">NoteBook</string>
    <string name="recipes_favorite">Favorites</string>
    <string name="add_note">+ Add Note</string>
    <string name="value_30_100">value 30–100%</string>
    <string name="background_card">Background Card</string>
    <string name="height">height =</string>
    <string name="width">width =</string>
    <string name="create_note">Create Note</string>
    <string name="note">Note</string>
    <string name="standard_notes">Standard notes</string>
    <string name="food_notes">Food notes</string>
    <string name="paint_notes">Paint notes</string>
    <string name="range_error">Range ERROR</string>
    <string name="nuber_format_error_message">NumberF format ERROR</string>
    <string name="empty_field_error_messange">Empty field ERROR</string>
    <string name="max_notes_massenge">Max limited notes</string>
    <string name="paint">Paint</string>
    <string name="canvas_open">open canvas</string>
    <string name="canvas">Canvas</string>
    <string name="clear">clear</string>
    <string name="pix">pix</string>
    <string name="brash">Brash</string>
    <string name="not_permission">not permission</string>
    <string name="max_20">max 20</string>
    <string name="save_image">save image</string>
    <string name="calculator">Калькулятор</string>
    <string name="recipes">Рецепты</string>
    <string name="settings">Настройки</string>
    <string name="other">Другой</string>
    <string name="age">Возраст</string>
    <string name="weight">Вес</string>
    <string name="burning_weight">Сожжено</string>
    <string name="eating_weight">Cъедено</string>
    <string name="zero">0</string>
    <string name="format_challenge">%d/%d</string>
    <string name="protain">Белки</string>
    <string name="fats">Жиры</string>
    <string name="carbohydrates">Углеводы</string>
    <string name="Name">Название</string>
    <string name="calorie">Калории</string>
    <string name="time">Время</string>
    <string name="cancel">Cancel</string>
    <string name="saved_mess">Saved: </string>
    <string name="add_diary">Добавить +</string>
    <string name="anonimus_sign_in">Войти анонимно</string>
    <string name="alert_dialog_header">Вы точно хотите удалить заметку?</string>
    <string name="no">нет</string>
    <string name="yes">да</string>
    <string name="list_foods">List foods</string>
    <string name="list_foods_hint">Введите по строчно название продуктов</string>
    <string name="list_foods_header">List Foods</string>
    <string name="gram">gm</string>
    <string name="network_error_mess">Network ERROR</string>
    <string name="general">General:</string>
    <string name="search">search</string>
    <string name="recipe_search">Recipe search</string>
    <string name="color_selection">color selection</string>
    <string name="alpha">alpha</string>
    <string name="ok">OK</string>
    <string name="clearCanvas_mess">Вы точно хотите очистить холст?</string>
    <string name="weight_gm">вес гм\n</string>
    <string name="exit">выйти</string>
    <string name="type_name_product">Введите название продукта</string>
    <string name="count_products">%d шт</string>
    <string name="count_protein">Белки %d г</string>
    <string name="count_fats">Жиры %d г</string>
    <string name="format_time">%02d:%02d</string>
    <string name="count_carbohydrates">Углеводы %d г</string>
    <string name="count_calorie">Количество  ккал %d</string>
    <string name="create_notes">Создаение заметки</string>
    <string name="save">Сохранить</string>
    <string name="disabled">Отменить</string>
    <string name="type_weight">Введите вес</string>
    <string name="type_height">Введите рост</string>
    <string name="male">М</string>
    <string name="female">Ж</string>
    <string name="select_meta">Ваша цель</string>
    <string name="select_weight">Выберите вес</string>
    <string name="select_height">Выберите рост</string>
    <string-array name="type_modes">
        <item>Похудеть</item>
        <item>Набрать вес</item>
    </string-array>
    <string name="pix_0">Pix 0</string>
    <string name="alpha_0">Alpha 0</string>
    <string name="alpha_string">Alpha</string>
    <string name="pix_string">Pix</string>
    <string name="water">Вода</string>
    <string name="select_sex">Выберите пол</string>
    <string name="name_splash_app">FoodNote</string>
    <string name="loading_splash">Loading ...</string>
    <string name="night_theme">Night theme</string>
    <string name="edit_profile">Edit profile</string>
    <string name="you_profile">You profile</string>
    <string name="profile">Profile</string>
    <string name="profile_header">Ваш профиль</string>
    <string name="save_profile">Сохранить профиль</string>
    <string name="info_app">Info app</string>
    <string name="changing_account">Changing account</string>
    <string name="account">Account</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="type_age">Введите возраст</string>
    <string name="recipes_for_you">Recipes for you</string>
    <string name="favorite">Favorite</string>
    <string name="empty_list_favorite_recipes">Список избранных рецептов пуст</string>
</resources>