<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/headerEditorFoodsNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/list_foods"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/listWeight"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:textSize="12sp"
        android:hint="@string/weight_gm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerEditorFoodsNote" />

    <EditText
        android:id="@+id/listFoods"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="90dp"
        android:hint="@string/list_foods_hint"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/listWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerEditorFoodsNote" />

</androidx.constraintlayout.widget.ConstraintLayout>