<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:backgroundTint="?attr/clearWhite"
        app:cardCornerRadius="56dp"
        app:strokeColor="?attr/strokeColorCardConstructor"
        app:strokeWidth="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                android:text="@string/width"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/background_card"
                android:textColor="?attr/textColorLightGray"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/colorPink"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="6dp"
                android:text="@string/value_30_100"
                android:textColor="?attr/textColorLightGray"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="122dp"
                android:layout_height="192dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="60dp"
                android:src="@drawable/ic_vectorcard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editHeight"
                android:layout_width="32dp"
                android:layout_height="40dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <EditText
                android:id="@+id/editWidth"
                android:layout_width="32dp"
                android:layout_height="40dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/note"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/editNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="?attr/buttonCreateConstructor"
                android:text="@string/create_note"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/colorGreen"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="?attr/colorCardGreen"
                app:cardCornerRadius="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:strokeColor="#A6A6A6"
                app:strokeWidth="1dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/colorPink"
                android:layout_width="@dimen/squareColor_24dp"
                android:layout_height="@dimen/squareColor_24dp"
                android:layout_marginEnd="6dp"
                android:backgroundTint="?attr/colorCardPink"
                app:cardCornerRadius="0dp"
                app:layout_constraintEnd_toStartOf="@+id/colorYellow"
                app:layout_constraintTop_toTopOf="@+id/colorYellow"
                app:strokeColor="#A6A6A6"
                app:strokeWidth="1dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/colorYellow"
                android:layout_width="@dimen/squareColor_24dp"
                android:layout_height="@dimen/squareColor_24dp"
                android:layout_marginEnd="6dp"
                android:backgroundTint="?attr/colorCardYellow"
                app:cardCornerRadius="0dp"
                app:layout_constraintEnd_toStartOf="@+id/colorBlue"
                app:layout_constraintTop_toTopOf="@+id/colorBlue"
                app:strokeColor="#A6A6A6"
                app:strokeWidth="1dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/colorWhite"
                android:layout_width="@dimen/squareColor_24dp"
                android:layout_height="@dimen/squareColor_24dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:backgroundTint="?attr/colorCardWhite"
                app:cardCornerRadius="0dp"
                app:layout_constraintEnd_toStartOf="@+id/colorYellow"
                app:layout_constraintTop_toBottomOf="@+id/colorPink"
                app:strokeColor="#A6A6A6"
                app:strokeWidth="1dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/colorGray"
                android:layout_width="@dimen/squareColor_24dp"
                android:layout_height="@dimen/squareColor_24dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:backgroundTint="?attr/colorCardGray"
                app:cardCornerRadius="0dp"
                app:layout_constraintStart_toEndOf="@+id/colorWhite"
                app:layout_constraintTop_toBottomOf="@+id/colorYellow"
                app:strokeColor="#A6A6A6"
                app:strokeWidth="1dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/colorBlue"
                android:layout_width="@dimen/squareColor_24dp"
                android:layout_height="@dimen/squareColor_24dp"
                android:layout_marginEnd="6dp"
                android:backgroundTint="?attr/colorCardBlue"
                app:cardCornerRadius="0dp"
                app:layout_constraintEnd_toStartOf="@+id/colorGreen"
                app:layout_constraintTop_toTopOf="@+id/colorGreen"
                app:strokeColor="#A6A6A6"
                app:strokeWidth="1dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:backgroundTint="#D2F6AE"
        android:elevation="5dp"
        app:cardCornerRadius="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="?attr/myGray"
        app:strokeWidth="3dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:src="@drawable/ic_baseline_more_horiz_24" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>